# instagram

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml
.github/workflows/: github-actions-ec2.yml
api/: .coverage  Dockerfile  pyproject.toml  requirements.txt
api/PostApi/: apps.py  models.py  serializers.py  urls.py  views.py
api/PostApi/migrations/: 0002_alter_post_description.py
api/comments/: models.py  serializers.py  tests.py  urls.py  views.py
api/comments/migrations/: 0001_initial.py
api/core/: settings.py  urls.py
api/insta/: locustfile.py  models.py  serializers.py  urls.py  views.py
api/instagram/: .env  settings.py  urls.py
api/post/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
api/post/migrations/: 0001_initial.py  0002_alter_post_description.py  0003_post_author.py
api/post/tests/: test_api.py
api/posts/: models.py  serializers.py  urls.py  views.py
api/posts/migrations/: 0001_initial.py
api/tags/: models.py  serializers.py
api/tags/migrations/: 0001_initial.py
api/user/: models.py  serializers.py  tests.py  urls.py  views.py
api/user/migrations/: 0001_initial.py  0002_newuser_avatar.py  0003_alter_newuser_is_active.py  0004_alter_newuser_gender_alter_newuser_name_and_more.py
cdk-ec2-instagram/: cdk.json  package-lock.json  package.json
cdk-ec2-instagram/configuration/: config.sh
cdk-ec2-instagram/lib/: cdk-ec2-instagram-stack.ts
cdk-ec2-instagram/test/: cdk-ec2-instagram.test.ts
scripts_for_development/: api_debug.sh  ui_web_debug.sh
ui/web/: Dockerfile  package-lock.json  (+1 more)
(+21 files in other folders)
